<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginback"
    tools:context=".LoginUI">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LogIn1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <EditText
            android:id="@+id/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/username"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textColorHint="#878383"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasseWord1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="@+id/Email"
            app:layout_constraintStart_toStartOf="@+id/Email"
            app:layout_constraintTop_toBottomOf="@+id/Email"
            app:passwordToggleEnabled="true"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="286dp">

            <EditText
                android:id="@+id/PasseWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/username"
                android:hint="Mot de passe"
                android:inputType="textPassword"
                android:maxLength="25"
                android:minHeight="48dp"

                android:paddingLeft="20dp"
                android:textColor="@color/black"
                android:textColorHint="#000" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/LogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/chekeout"
            android:text="Connexion"
            android:layout_gravity="center"
            android:textSize="26dp"
            android:paddingHorizontal="55dp"
            android:paddingVertical="7dp"

            android:textColor="@color/white"
            app:backgroundTint="@color/pink"
            app:layout_constraintEnd_toEndOf="@+id/PasseWord1"
            app:layout_constraintStart_toStartOf="@+id/PasseWord1"
            app:layout_constraintTop_toBottomOf="@+id/PasseWord1" />
    </LinearLayout>




    <TextView

        android:id="@+id/SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/loginui_inscrire"

        android:textColor="@color/teal_200"
        android:textSize="18sp"
        app:backgroundTint="@color/pink"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvisiteur"
        app:layout_constraintVertical_bias="0.51"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginui_pasinscrire"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:layout_marginLeft="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogIn1" />

    <TextView
        android:id="@+id/txtvisiteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/login_visiteur"
        android:textColor="#FFFFFF"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>