<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity"
    >

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/butom_nav_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/user_menu"
        app:itemTextColor="@drawable/selecter_user"
        app:itemIconTint="@drawable/selecter_user"
        app:itemIconSize="28dp"

        app:layout_constraintStart_toStartOf="parent" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewCart">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"

                android:layout_marginTop="15dp"
                android:text="@string/cart_order_instruction"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewCart" />

            <EditText
                android:id="@+id/cartInstEdt"
                android:layout_width="380dp"
                android:layout_height="140dp"
                android:ems="10"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:hint="exemple sans ou avec mayounaise et harissa"
                android:inputType="textPersonName"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_horizontal"

                android:background="@drawable/box2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCart" />

            <TextView
                android:id="@+id/textViewCart2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"


                android:text="@string/cart_user_instruction"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cartInstEdt" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCart2">

                <RadioButton
                    android:id="@+id/cmd_local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="5dp"
                    android:checked="true"
                    android:text="@string/cart_radio_localcmd"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCart2" />

                <RadioButton
                    android:id="@+id/cmd_dlerver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="5dp"
                    android:checked="false"
                    android:text="@string/cart_radio_delevery"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/cmd_local"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCart2" />

            </RadioGroup>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cnst_cart_locat"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/radioGroup">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="Pavillon"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/pavillon_spiner"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:entries="@array/pavillon"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.851" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="22dp"
                    android:layout_height="21dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_location_on_24" />


                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"

                    android:text="Salle"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/pavillon_spiner"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/sallespiner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:entries="@array/salle"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.888" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:text="@string/cart_chose_youradresse"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"

                >



                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"

                    android:text="Total : "
                    android:textColor="@color/beige"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/butom_nav_user"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                    app:layout_constraintVertical_bias="0.56" />

                <TextView
                    android:id="@+id/text_cart_total"
                    android:layout_height="wrap_content"
                    android:layout_width="300dp"

                    android:layout_marginEnd="5dp"

                    android:gravity="end"
                    android:text="0 da"
                    android:textColor="@color/beige"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:id="@+id/textCheckout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:layout_marginTop="15dp"


                android:layout_marginBottom="54dp"
                android:background="@drawable/chekeout"
                android:gravity="center"
                android:text="@string/cart_checkout"
                android:textColor="@color/white"
                android:textSize="30sp"

                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/butom_nav_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="1.0" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>