<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">



    <TextView
        android:id="@+id/dessertSwitch"
        android:layout_width="96dp"
        android:layout_height="94dp"
        android:background="@drawable/box2"
        android:drawableTop="@drawable/cake"
        android:gravity="center_horizontal|bottom"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:text="Dessert"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/platSwitch"
        app:layout_constraintTop_toBottomOf="@+id/drinkSwitch" />

    <TextView
        android:id="@+id/platSwitch"
        android:layout_width="96dp"
        android:layout_height="94dp"
        android:background="@drawable/box2"
        android:drawableTop="@drawable/sbaghet"
        android:gravity="center_horizontal|bottom"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Plat"

        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/SandwichSwitch"
        app:layout_constraintTop_toBottomOf="@+id/burgerSwitch" />

    <TextView
        android:id="@+id/burgerSwitch"
        android:layout_width="96dp"
        android:layout_height="94dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/box1"
        android:drawableTop="@drawable/burger"
        android:gravity="center_horizontal|bottom"
        android:textColor="@color/pink"
        android:layout_marginLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Burger"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/pizzaSwitch"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textViewHi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/main_hi"

        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/userHitxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_geust"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewHi"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_welcom"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHi" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"

        android:background="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/connectionTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/adamina"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="Se connecter" />


        <TextView
            android:id="@+id/creditTxt"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_baseline_credit_card_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/white"
            android:gravity="end|bottom"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="0"
            android:textDirection="ltr" />


    </LinearLayout>

    <TextView
        android:id="@+id/pizzaSwitch"
        android:layout_width="96dp"
        android:layout_height="94dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/box2"
        android:drawableTop="@drawable/pizza"
        android:gravity="center_horizontal|bottom"
        android:paddingTop="10dp"
        android:textStyle="bold"
        android:paddingBottom="10dp"
        android:text="Pizza"
        android:layout_marginLeft="42dp"

        android:textSize="15sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/drinkSwitch"
        android:layout_width="96dp"
        android:layout_height="94dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/box2"
        android:drawableTop="@drawable/drink"
        android:gravity="center_horizontal|bottom"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Drink"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/burgerSwitch"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/SandwichSwitch"
        android:layout_width="96dp"
        android:layout_height="94dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/box2"
        android:drawableTop="@drawable/sand"
        android:gravity="center_horizontal|bottom"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Sandwich"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaSwitch" />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/platSwitch"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/platSwitch"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/cloudeName"
                android:layout_width="105dp"
                android:layout_height="39dp"
                android:layout_marginLeft="8dp"
                android:background="@drawable/buvname2"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text="cloud"

                android:textColor="@color/purple"

                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SandwichSwitch" />

            <TextView
                android:id="@+id/stikeName"
                android:layout_width="105dp"
                android:layout_height="39dp"
                android:layout_marginLeft="8dp"
                android:background="@drawable/buvname"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text="stike"
                android:textColor="@color/purple"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/etuclubName"
                android:layout_width="105dp"
                android:layout_height="39dp"
                android:layout_marginLeft="8dp"

                android:background="@drawable/buvname"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text="etu club"
                android:textColor="@color/purple"
                android:textSize="20sp" />



        </LinearLayout>

    </HorizontalScrollView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerArticle"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/butom_nav_user"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:itemIconSize="28dp"

        app:itemIconTint="@drawable/selecter_user"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/user_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>